Closed Bug 378606 Opened 19 years ago Closed 19 years ago

[FIX]Does not return to the scroll position in the page after reload

Categories

(Core :: General, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla1.9alpha4

People

(Reporter: ria.klaassen, Assigned: bzbarsky)

References

(Blocks 1 open bug, )

Details

(Keywords: regression)

Attachments

(1 file)

When I scroll down and click Reload on some sites it doesn't return to the position in the page but stays on top. It happens with the following URL: https://bugzilla.mozilla.org/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&product=Core&product=Firefox&product=Toolkit&long_desc_type=substring&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&resolution=FIXED&resolution=INVALID&resolution=WONTFIX&resolution=DUPLICATE&resolution=WORKSFORME&resolution=EXPIRED&resolution=MOVED&resolution=---&emailassigned_to1=1&emailtype1=exact&email1=&emailassigned_to2=1&emailreporter2=1&emailqa_contact2=1&emailtype2=exact&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=-0d&chfieldto=Now&chfield=[Bug+creation]&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0= And mostly, not always, with this URL: https://bugzilla.mozilla.org/buglist.cgi?product=Core&product=Firefox&product=Mozilla+Application+Suite&product=Thunderbird&product=Toolkit&bug_status=UNCONFIRMED,NEW,ASSIGNED,REOPENED,RESOLVED&chfield=%5BBug%20creation%5D&chfieldfrom=-24h But never, until now, with http://www.nu.nl/ I found the following regression range for it: http://bonsai.mozilla.org/cvsquery.cgi?module=PhoenixTinderbox&date=explicit&mindate=1177105080&maxdate=1177110119 where bug 84582 is the only checkin. I'm afraid this is a vague bug. I repeated it a lot of times however before filing this bug.
Attached patch FixSplinter Review
Basically fallout from deferring InitialReflow, in this case to after we finish parsing the document altogether.... Note that the exact location of the RestoreRootScrollPosition() call in InitialReflow is not that important as long as it happens after we construct the root scrollframe. I went with doing it once we finish all the reflowing, just because.
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
Attachment #262734 - Flags: superreview?(roc)
Attachment #262734 - Flags: review?(roc)
I wonder how to go about testing this... basically, I'd need a page with a stylesheet that is guaranteed to take longer to load than the body of the page itself will take to load and parse, in order to reproduce this bug reliably.
Flags: in-testsuite?
OS: Windows XP → All
Priority: -- → P1
Hardware: PC → All
Summary: Does not return to the scroll position in the page after reload → [FIX]Does not return to the scroll position in the page after reload
Target Milestone: --- → mozilla1.9alpha4
Attachment #262734 - Flags: superreview?(roc)
Attachment #262734 - Flags: superreview+
Attachment #262734 - Flags: review?(roc)
Attachment #262734 - Flags: review+
FWIW, this checkin seems to have at least temporarily fixed the problem for me. I'd been noticing it frequently on mozillazine forum pages (e.g. the daily trunk build threads in particular).
Fix checked in yesterday.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Blocks: 251784
Depends on: 396226
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: