Handle restoring scroll position correctly even if InitialReflow comes afterEndLoad.  Bug 378606, r+sr=roc